crates/fig-lexer/tests/snapshots/integration_tests__paths__builtin_namespaces.snap
---
source: crates/fig-lexer/tests/integration_tests.rs
expression: tokens
---
- Using
- Ident: std
- ColonColon
- Ident: io
- Newline
- Using
- Ident: core
- ColonColon
- Ident: mem
- Newline
- Using
- Ident: alloc
- ColonColon
- Ident: global
- Newline
- Func
- Ident: builtin_ns
- LParen
- RParen
- Arrow
- Ident: ok
- Newline
- Indent
- Let
- Ident: x
- Eq
- Ident: std
- ColonColon
- Ident: VERSION
- Newline
- Let
- Ident: y
- Eq
- Ident: core
- ColonColon
- Ident: ARCH
- Newline
- Let
- Ident: ptr
- Eq
- Ident: alloc
- ColonColon
- Ident: allocate
- LParen
- IntegerLiteral:
    base: Decimal
    digits: "64"
    suffix: ~
- RParen
- Newline
- Pass
- Newline
- Dedent
